syntax = "proto3";
package com.xabe.vehicle.update;

import "vehicle_id.proto";
import "engine.proto";

option java_package = "com.xabe.vehicle.api.grpc.update.updatevehicleengine";

message UpdateVehicleEngineRequest {

  com.xabe.vehicle.VehicleId id = 1;

  int64 timestamp = 2;

  string store_id = 3;

  repeated com.xabe.vehicle.Engine engines = 4;

}